# render_relay

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  index.html  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
doc/: index.md  package-lock.json  package.json
doc/.vitepress/: config.mts
doc/.vitepress/theme/: custom.css
doc/.vitepress/theme/components/: TemplateCard.vue
doc/guide/: architecture.md  cli-reference.md  configuration.md  data-fetching.md  error-handling.md  extending.md  getting-started.md  metadata.md  middleware.md  project-structure.md  rendering.md  routing.md  ssg.md  state-management.md  styling.md  websockets.md  what-is-brahma.md
doc/templates/: index.md  templates.data.ts
doc/templates/blog/: .env.example  Dockerfile  README 2.md  README.md  docker-compose.yml  metadata.json  package-lock.json  package.json  requirements 2.txt  requirements.txt  settings.py  tailwind.config.js
doc/templates/blog/_gingerjs/: main.py
doc/templates/blog/app/: main.py
doc/templates/blog/scripts/: seed.py
doc/templates/blog/src/: global.css
doc/templates/blog/src/app/: index.jsx  index.py  layout.jsx
doc/templates/blog/src/components/: BlogUI.jsx
doc/templates/blog/src/core/: cache.py  config.py  database.py  models.py
doc/templates/blog/src/render_relay_api_client/: index.ts
doc/templates/blog/src/render_relay_api_client/core/: OpenAPI.ts
doc/templates/blog/src/render_relay_api_client/schemas/: $HTTPValidationError.ts  $ValidationError.ts
doc/templates/blog/src/repositories/: blog.py
doc/templates/blog/src/schemas/: blog.py
doc/templates/blog/src/services/: blog.py
src/kiwijs/: __init__.py  cli.py
src/kiwijs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kiwijs/core/app/: app.py
src/kiwijs/core/bridge/: bridge_ops.py  unix_sock.js
src/kiwijs/core/create_app/: cra.py  vite.config.js  vite.node.config.js
src/kiwijs/core/create_app/routes/fastApi/: exception_view.py  layout_view.py  middleware.py  not_found.py  route_processor.py  view.py  ws.py
src/kiwijs/core/hmr/: __init__.py
src/kiwijs/core/livereload/: __init__.py  livereload.py
src/kiwijs/core/ssr/: routes.js  ssr_ops.py
src/kiwijs/utils/: __init__.py  add_url.py  build_manager.py  change_handler.py  constant.py  create_app.py  delete_pycache.py  execution_time.py  find_files.py  load_settings.py  user_input.py
src/kiwijs/utils/app_boiler_plate/: main.py  package.json  settings.py  tailwind.config.js
src/kiwijs/utils/app_boiler_plate/src/app/: index.jsx  index.py  layout.jsx
src/kiwijs/utils/react_components/: Error.jsx  LayoutPropsProvider.jsx  Main_client.jsx  PropsProvider.jsx  StaticRouterWrapper.jsx  livereload_client.js
src/render_relay/: __init__.py  cli.py
src/render_relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/render_relay/core/app/: app.py
src/render_relay/core/bridge/: __init__.py  bridge_ops.py  unix_sock.js
src/render_relay/core/create_app/: __init__.py  cra.py  vite.config.js  vite.node.config.js
src/render_relay/core/create_app/routes/fastApi/: __init__.py  api.py  exception_view.py  not_found.py  route_processor.py  view.py  ws.py
src/render_relay/core/hmr/: hmr.py
src/render_relay/core/ssr/: __init__.py  routes.js  ssr_ops.py
src/render_relay/utils/: __init__.py  add_url.py  build_manager.py  change_handler.py  common.py  constant.py  create_app.py  execution_time.py  find_files.py  get_logger.py  load_settings.py  user_input.py
src/render_relay/utils/app_boiler_plate/: main.py  package.json
src/render_relay/utils/app_boiler_plate/public/templates/: layout.html
src/render_relay/utils/app_boiler_plate/src/app/: index.jsx
src/render_relay/utils/app_boiler_plate/src/libs/: navigate.jsx
src/render_relay/utils/react_components/: BrowserRouterWrapper.jsx  DefaultLoader.jsx  GenericNotFound.jsx
(+2 files in other folders)
