[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_relay"
version = "0.0.2"
description = "Passing the baton of rendered HTML from server to client"
readme = "readme.md"
authors = [
    {name = "py-react", email = "yksandeep08+reactpy@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11.0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "blessed==1.21.0",
    "click==8.1.8",
    "editor==1.6.6",
    "fastapi==0.115.12",
    "idna==3.10",
    "inquirer==3.4.0",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "readchar==4.2.1",
    "runs==1.2.2",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "wcwidth==0.2.13",
    "xmod==1.8.1",
    "psutil==7.0.0",
    "watchdog==6.0.0",
    "uvicorn==0.34.2",
    "Jinja2==3.1.6"
]

[project.urls]
Homepage = "https://github.com/py-react/render-relay"

[project.scripts]
render_relay = "render_relay.cli:cli"

[tool.setuptools]
include-package-data = true