[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwijs"
version = "0.0.2"
description = "Full-stack web framework for building React apps with Python. Features filesystem-based routing, SSR, client/server components, and FastAPI integration."
readme = "readme.md"
authors = [
    {name = "py-react", email = "yksandeep08+reactpy@gmail.com"}
]
keywords = [
    "react",
    "fullstack",
    "framework",
    "ssr",
    "server-side-rendering",
    "fastapi",
    "web",
    "frontend",
    "backend",
    "python",
    "javascript",
    "meta-framework",
    "router",
    "components"
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Framework :: FastAPI",
    "Framework :: React",
]
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.0.0",
    "blessed>=1.21.0",
    "certifi>=2024.0.0",
    "click>=8.1.0",
    "dnspython>=2.4.0",
    "docker>=7.0.0",
    "editor>=1.6.0",
    "email_validator>=2.0.0",
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.6",
    "fastapi-cloud-cli>=0.1.0",
    "h11>=0.14.0",
    "httpcore>=1.0.0",
    "httptools>=0.6.0",
    "httpx>=0.27.0",
    "idna>=3.0",
    "inquirer>=3.2.0",
    "Jinja2>=3.1.0",
    "kubernetes>=30.0.0",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.0",
    "mdurl>=0.1.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pydantic_core>=2.0.0",
    "Pygments>=2.17.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.0",
    "readchar>=4.0.0",
    "rich>=14.0.0",
    "rich-toolkit>=0.9.0",
    "rignore>=0.5.0",
    "runs>=1.2.0",
    "sentry-sdk>=2.0.0",
    "shellingham>=1.5.0",
    "sniffio>=1.3.0",
    "starlette>=0.40.0",
    "typer>=0.12.0",
    "typing-inspection>=0.4.0",
    "typing_extensions>=4.0.0",
    "urllib3>=2.0.0",
    "uvicorn>=0.30.0",
    "uvloop>=0.19.0",
    "watchdog>=4.0.0",
    "watchfiles>=0.23.0",
    "wcwidth>=0.2.0",
    "websockets>=13.0.0",
    "xmod>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/py-react/kiwijs"
Repository = "https://github.com/py-react/kiwijs"
Documentation = "https://github.com/py-react/kiwijs#readme"
"Bug Tracker" = "https://github.com/py-react/kiwijs/issues"

[project.scripts]
kiwijs = "kiwijs.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
include-package-data = true
